# cpp-reference

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  GoogleTest-helper.cmake  README.md  appveyor.yml  builder.sh  cleaner.sh  common-project-include.in  main  main.cpp  project-meta-info.in  runner.sh
cmake/: ConfigureWorkspace.cmake
include/: pch.hpp  stl.cpp
scripts/cmake/: ConfigurePreCompiledHeaders.cmake  ConfigureWorkspace.cmake
src/: main.cpp  standard_template_library.hpp
tests/: CMakeLists.txt  main.test.cpp
tests/memory_tests/: CMakeLists.txt  mem_tester.cpp
tests/performance_tests/: CMakeLists.txt  fastmod_tester.cpp  performance_tester.cpp  push_back_tester.cpp
tools/cmake/: Conan.cmake  ConfigureWorkspace.cmake
tools/cmake/LogSystem/: Logger.cmake  UbuntuColorCodes.cmake  WindowsColorCodes.cmake
